# Prismatic

./: CMakeLists.txt  Controls.cpp  Controls.h  GlWindow.cpp  README.md  main.cpp  vcpkg.json
game/: GameDataCache.cpp  GameDataCache.h  GameEngine.cpp  GameEngine.h  GameState.cpp  GameState.h
game/levels/: Level1.cpp  Level2.cpp  Level3.cpp  WinLevel.cpp
render/: Camera.cpp  Camera.h  GameRenderer.cpp  GameRenderer.h
render/shader/: Shader2D.cpp  Shader2D.h  Shader3D.cpp  Shader3D.h  ShaderEnv.cpp  ShaderEnv.h  ShaderProgram.cpp  ShaderProgram.h  TestShader.cpp  TestShader.h
res/models/: button_red.mtl  button_red_outlined.mtl  goal.mtl  platform4x4.mtl  test_cube.mtl
res/shaders/: f2D.glsl  f3D.glsl  fEnv.glsl  fTest.glsl  v2D.glsl  vEnv.glsl  vTest.glsl
screens/: AbstractScreenUtils.cpp  AbstractScreenUtils.h  IScreen.h  ScreenManager.cpp  ScreenManager.h  ScreenUtils.cpp  ScreenUtils.h  TestScreen.cpp  TestScreen.h
